--- a/src/index.css
+++ b/src/index.css
@@ -47,4 +47,12 @@ main{
   box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 
   color: #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+}
+
+/*dimming and brighting when cursor click on the search bar*/
+.search-box .search-bar:focus{
+  background-color: rgba(255, 255, 255, 0.85);
 }
